--- a/ISP.ipynb
+++ b/ISP.ipynb
@@ -39,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\f",
+      "\f\n",
       "\n"
      ]
     }
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d82a7540-4cc7-4e76-b603-59745aa02755",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
     "raw_image = raw_data.reshape((height, width))\n",
     "\n",
     "# Step 3: Display a downsampled version of the raw image for testing\n",
-    "downsampled_image = raw_image[::4, ::4]  # Take every 4th pixel to reduce size by 75% for quick testing\n",
+    "downsampled_image = raw_image[::5, ::5]  # Take every 4th pixel to reduce size by 75% for quick testing\n",
     "\n",
     "plt.imshow(downsampled_image, cmap='gray')\n",
     "plt.title(\"Downsampled RAW Image\")\n",
@@ -353,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
